# florence2.cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bart_tokenizer_fast.cpp  bart_tokenizer_fast.hpp  build.bat  build.sh  cbindgen.toml  clip_image_processor.cpp  clip_image_processor.hpp  convert_hf_to_gguf.py  convert_to_gguf.py  convert_to_jit.py  convert_to_onnx.py  florence2_processor.cpp  florence2_processor.hpp  gguf_tool.cpp  main.cpp  metadata.txt  print_tensor_mapping.py  requirements.txt  tensors_mapping.json  test_bart.cpp  test_bart.py  test_clip.cpp  test_clip.py  test_florence2.cpp  test_florence2.py  test_florence2_gguf.cpp  test_florence2_onnx.cpp  test_ggml.cpp  tokenizers.h
hf_tokenizer/: Cargo.toml  hf_tokenizer.h  hf_tokenizers.cpp  hf_tokenizers.h  hf_tokenizers.hpp
hf_tokenizer/include/: hf_tokenizer.h
hf_tokenizer/src/: lib.rs
include/: image.hpp  model_processor.hpp  processor_output.hpp  tokenizer.hpp
include/modeling/: learned_absolute_position_embedding_1d.hpp  learned_absolute_position_embedding_2d.hpp  my_sequential.hpp  positional_embedding_cosine_1d.hpp  pre_norm.hpp
src/: image.cpp  lib.rs  model_processor.cpp  tokenizer.cpp
src/modeling/: learned_absolute_position_embedding_1d.cpp  learned_absolute_position_embedding_2d.cpp  my_sequential.cpp  positional_embedding_cosine_1d.cpp
